# block-prefix-analyzer

./: .gitignore  AGENT_ANALYSIS_GUIDE.md  CAPABILITIES.md  CLAUDE.md  EXPERIMENT_DESIGN.md  IMPLEMENTATION_PLAN.md  PHASE2_PLAN.md  PROJECT_SPEC_FOR_CLAUDE.md  README.md  README_NEXT_STEPS.md  V2_READINESS.md  V3_PLAN.md  pyproject.toml  requirements.txt  two_queue_ttl_experiment_plan.md  可视化.md
.streamlit/: config.toml
docs/: V4_plan.md  V4_runbook.md  analysis_dimensions.md  common_prefix_chain_spec.md  dashboard_phase2_plan.md  kv_cache_eviction_design.md  可视化.md
examples/: quickstart.py
scripts/: analyze_benchmark_results.py  analyze_block_freq.py  analyze_prefix_hash_alignment.py  analyze_production_replay.py  benchmark_index.py  build_app_registry.py  build_app_report.py  build_model_report.py  convert_agent_csv_to_jsonl.py  convert_csv_to_jsonl.py  dashboard.py  generate_common_prefix.py  generate_e5_block_text.py  generate_f10.py  generate_f13.py  generate_f13_business.py  generate_f13_strict.py  generate_f14.py  generate_f14_agent.py  generate_f4.py  generate_f4_business.py  generate_f9.py  generate_reuse_distance.py  generate_reuse_rank.py  generate_reuse_rank_business.py  generate_single_turn_subset.py  generate_skewness.py  generate_top_ngrams.py  generate_top_ngrams_business.py  generate_traffic_pattern.py  generate_user_hit_rate.py  init_maas_configs.py  make_synthetic_business.py  make_synthetic_f10.py  render_static_report.py  replay_production_benchmark.py  run_dashboard_pipeline.sh  run_kv_cache_benchmark.py  run_maas_analysis.sh  (+1 more)
(+232 files in other folders)
