[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "block-prefix-analyzer"
version = "0.0.1"
description = "Offline analyzer for block-sequence prefix reuse in LLM request traces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "block-prefix-analyzer contributors" }]
keywords = ["llm", "vllm", "prefix-cache", "analysis", "trace"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
plots = [
    "matplotlib>=3.6",
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/Xiyuejiushikaixindeyisi/block-prefix-analyzer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
